# SelectCourseWork

DesignOperatingSystems/DesignOS-xv6-public-lab1/: CMakeLists.txt  Makefile
DesignOperatingSystems/DesignOS-xv6-public-lab1/bootblock/: CMakeLists.txt  bootmain.c  e820.S
DesignOperatingSystems/DesignOS-xv6-public-lab1/include/: error.h  memlayout.h  mmu.h  stat.h  stdarg.h  stdio.h  types.h
DesignOperatingSystems/DesignOS-xv6-public-lab1/include/asm/: x86.h
DesignOperatingSystems/DesignOS-xv6-public-lab1/instructions/: lab1.md
DesignOperatingSystems/DesignOS-xv6-public-lab1/kernel/: CMakeLists.txt  Sources.cmake
DesignOperatingSystems/DesignOS-xv6-public-lab1/kernel/include/: buf.h  date.h  defs.h  mp.h  proc.h  stab.h  string.h
DesignOperatingSystems/DesignOS-xv6-public-lab1/kernel/src/: console.c  exec.c  fs.c  ide.c  ioapic.c  kalloc.c  lapic.c  log.c  main.c  mp.c  proc.c  stab.c  string.c  syscall.c  sysfile.c  trap.c  uart.c  vm.c
DesignOperatingSystems/DesignOS-xv6-public-lab1/kernel/src/asm/: entryother.S
DesignOperatingSystems/DesignOS-xv6-public-lab1/scripts/: xv6-qemu
DesignOperatingSystems/DesignOS-xv6-public-lab1/user/: Sources.cmake
DesignOperatingSystems/DesignOS-xv6-public-lab1/user/src/: usertests.c
DesignOperatingSystems/DesignOS-xv6-public-lab2/: .gitignore  CMakeLists.txt
DesignOperatingSystems/DesignOS-xv6-public-lab2/ag_test/: forktest-xv6-qemu  forktest.asm  forktest.c  forktest_expected.out  forktest_fs.img  init.asm
DesignOperatingSystems/DesignOS-xv6-public-lab2/bootblock/: CMakeLists.txt  bootmain.c
DesignOperatingSystems/DesignOS-xv6-public-lab2/include/: fcntl.h  memlayout.h  mmu.h  param.h  types.h
DesignOperatingSystems/DesignOS-xv6-public-lab2/include/asm/: x86.h
DesignOperatingSystems/DesignOS-xv6-public-lab2/instructions/: lab0.md  lab2.md
DesignOperatingSystems/DesignOS-xv6-public-lab2/kernel/: CMakeLists.txt  Sources.cmake
DesignOperatingSystems/DesignOS-xv6-public-lab2/kernel/include/: defs.h  lab2_ag.h  proc.h
DesignOperatingSystems/DesignOS-xv6-public-lab2/kernel/src/: console.c  exec.c  kalloc.c  lab2_ag.c  lab2_ag_noprint.c  main.c  proc.c  string.c  syscall.c  sysproc.c  trap.c  vm.c
DesignOperatingSystems/DesignOS-xv6-public-lab2/tools/: mkfs.c
DesignOperatingSystems/DesignOS-xv6-public-lab2/user/: Sources.cmake
DesignOperatingSystems/DesignOS-xv6-public-lab2/user/src/: init.c  init1.c  main  tests.c  usertests.c
DesignOperatingSystems/DesignOS-xv6-public-lab3/: .gitignore
DesignOperatingSystems/DesignOS-xv6-public-lab3/bootblock/: bootasm.S
DesignOperatingSystems/DesignOS-xv6-public-lab3/include/: mmu.h  sched.h  syscall.h
DesignOperatingSystems/DesignOS-xv6-public-lab3/include/asm/: asm.h
DesignOperatingSystems/DesignOS-xv6-public-lab3/instructions/: lab3.md
DesignOperatingSystems/DesignOS-xv6-public-lab3/kernel/: CMakeLists.txt
DesignOperatingSystems/DesignOS-xv6-public-lab3/kernel/include/: .defs.h.swp  defs.h  proc.h  spinlock.h
DesignOperatingSystems/DesignOS-xv6-public-lab3/kernel/src/: exec.c  file.c  fs.c  kbd.c  main.c  picirq.c  proc.c  sleeplock.c  syscall.c  sysfile.c  sysproc.c  trap.c  uart.c  vm.c
DesignOperatingSystems/DesignOS-xv6-public-lab3/scripts/: xv6-qemu
DesignOperatingSystems/DesignOS-xv6-public-lab3/user/: CMakeLists.txt  Sources.cmake
DesignOperatingSystems/DesignOS-xv6-public-lab3/user/asm/: .usys.S.swp  free_stack_and_exit.S  usys.S
DesignOperatingSystems/DesignOS-xv6-public-lab3/user/include/: .user.h.swp  free_stack_and_exit.h  thread.h  user.h
DesignOperatingSystems/DesignOS-xv6-public-lab3/user/src/: test.c  test1.c  testFIFO.c  testThr.c  ulib.c
DesignOperatingSystems/DesignOS-xv6-public-lab4/: CMakeLists.txt
DesignOperatingSystems/DesignOS-xv6-public-lab4/include/: elf.h  fcntl.h  fs.h  stat.h  syscall.h
DesignOperatingSystems/DesignOS-xv6-public-lab4/include/asm/: x86.h
DesignOperatingSystems/DesignOS-xv6-public-lab4/instructions/: autograder_instructions.md  lab0.md  lab4.md
DesignOperatingSystems/DesignOS-xv6-public-lab4/kernel/: Sources.cmake  kernel.ld  notes.txt
DesignOperatingSystems/DesignOS-xv6-public-lab4/kernel/include/: file.h  proc.h  spinlock.h
DesignOperatingSystems/DesignOS-xv6-public-lab4/kernel/src/: .proc.c.swp  exec.c  file.c  fs.c  lapic.c  mp.c  proc.c  spinlock.c  syscall.c  sysfile.c  sysproc.c  trap.c  vm.c
DesignOperatingSystems/DesignOS-xv6-public-lab4/kernel/src/asm/: entry.S
DesignOperatingSystems/DesignOS-xv6-public-lab4/kernel/tools/: mksym.sh
DesignOperatingSystems/DesignOS-xv6-public-lab4/scripts/: gdbinit
DesignOperatingSystems/DesignOS-xv6-public-lab4/tools/: CMakeLists.txt  mkfs.c
DesignOperatingSystems/DesignOS-xv6-public-lab4/user/: Sources.cmake
DesignOperatingSystems/DesignOS-xv6-public-lab4/user/asm/: usys.S
DesignOperatingSystems/DesignOS-xv6-public-lab4/user/include/: user.h
DesignOperatingSystems/DesignOS-xv6-public-lab4/user/src/: ch.c  init.c  ls.c  perms.c  perms1.c  test0.c  tests.c  uid.c  ulib.c  usertests.c
HighPerformanceComputing/hw/: hw1.ipynb
HighPerformanceComputing/hw/.ipynb_checkpoints/: hw1-checkpoint.ipynb
HighPerformanceComputing/hw2/: hw2.ipynb
HighPerformanceComputing/hw2/.ipynb_checkpoints/: hw2-checkpoint.ipynb
HighPerformanceComputing/hw3/: hw3.ipynb
